--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
   <h1>Introduce Usuario y Contraseña Para iniciar Sesion</h1>
-  <form id="form1" name="form1" method="post" action="login.php">
+  <form id="form1" name="form1" method="post" action="Login.php">
     <table width="50%" border="0" align="center">
       <tr>
         <td colspan="2">
